--- a/chisiamo.html
+++ b/chisiamo.html
@@ -1,18 +1,31 @@
 <html><head></head><body>
-    <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
-      <style>
-        .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
-
-        #mobileMenu{
-          z-index: 999;
-        }
-
-      </style>
-    </div>
-    <script async="" src="./extra/analytics.js"></script>
-    <script type="text/javascript">
-      window["_gaUserPrefs"] = { ioo : function() { return true; } }
-    </script>
+  <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
+    <style>
+      .fluid-width-video-wrapper {
+        width: 100%;
+        position: relative;
+        padding: 0;
+      }
+      
+      .fluid-width-video-wrapper iframe,
+      .fluid-width-video-wrapper object,
+      .fluid-width-video-wrapper embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+      
+      #mobileMenu {
+        z-index: 999;
+      }
+    </style>
+  </div>
+  <script async="" src="./extra/analytics.js"></script>
+  <script type="text/javascript">
+    window["_gaUserPrefs"] = { ioo : function() { return true; } }
+  </script>
   <!--<![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
@@ -44,8 +57,8 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">
-							<img src="./extra/logo.png" alt="" height="40"> 
-						</a>
+            <img src="./extra/logo.png" alt="" height="40">
+          </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -83,9 +96,10 @@
       <div class="container">
         <header>
           <h1 class="uppercase text-center">CHI SIAMO</h1>
-          <p class="lead text-center">Image è un centro di bellezza in cui l'attenzione al tuo tempo è fondamentale:
-            è il percorso di bellezza che si adatta al tuo stile di vita e ai tuoi
-            ritmi, con trattamenti che privilegiano la qualità e l'intensità.</p><img src="images/chi_siamo.jpeg" class="center-block img-responsive" style="width:100%">
+          <p class="lead text-center">
+            Image è un piu di un centro di bellezza. In base alle esigenze e al tempo disponibile dei nostri clienti, proponiamo un percorso di bellezza personalizzato, puntando sulla qualità dei trattamenti e dei prodotti e le novità nel campo dell’estetica.
+            </p>
+          <img src="images/chi_siamo.jpeg" class="center-block img-responsive" style="width:100%">
         </header>
         <div class="divider">
           <!-- lines divider -->
@@ -98,9 +112,10 @@
               <!-- caption -->
               <div class="caption text-center">
                 <h4>
-                  <!-- name + occupation -->Paola Braga
-                  <small class="block fsize13">Responsabile</small>
-                </h4>
+                                    <!-- name + occupation -->Paola Braga
+                                    <small class="block fsize13">Con trent’anni di esperienza nel campo dell’estetica, Paola ha assicurato il successo della sua attività mantenendosi sempre aggiornata sulle tecniche e i trattamenti di ultima generazione. Apre la sua attività nel 1994 e continua a frequentare corsi di specializzazione su varie tecniche di massaggio, nuove tecnologie per l’estetica e nuovi prodotti, per poter offrire ai propri clienti sempre il meglio. È tra le prime a specializzarsi in Omoenergetica®, imparata da una famosissima docente argentina, e apprende tecniche pre e post operatorie della medicina estetica .
+</small>
+                                </h4>
               </div>
               <!-- /caption -->
             </div>
@@ -114,9 +129,10 @@
               <!-- caption -->
               <div class="caption text-center">
                 <h4>
-                  <!-- name + occupation -->Paola Braga
-                  <small class="block fsize13">Responsabile</small>
-                </h4>
+                                    <!-- name + occupation -->Marina
+                                    <small class="block fsize13">Diplomata estetista e con alle spalle una solida formazione nel campo della bellezza grazie ai molti corsi e seminari di specializzazione a cui ha preso parte, sa coniugare con maestria l’attenzione nell’utilizzo delle tecniche con una profonda conoscenza dei prodotti di ultima generazione. Collabora stabilmente con Image da oltre 15 anni.
+</small>
+                                </h4>
               </div>
               <!-- /caption -->
             </div>
@@ -130,9 +146,9 @@
               <!-- caption -->
               <div class="caption text-center">
                 <h4>
-                  <!-- name + occupation -->Paola Braga
-                  <small class="block fsize13">Responsabile</small>
-                </h4>
+                                    <!-- name + occupation -->Silvia
+                                    <small class="block fsize13">Inizia a lavorare presso il Centro Image a soli 19 anni, subito dopo aver concluso la sua formazione professionale in estetica. Negli anni ha seguito molti corsi di perfezionamento nelle varie discipline della bellezza (dal massaggio alla depilazione con tecniche di ultima generazione), diventando -a dispetto della giovane età- una professionista di altissimo profilo.</small>
+                                </h4>
               </div>
               <!-- /caption -->
             </div>
@@ -145,11 +161,11 @@
         </div>
         <div class="text-center">
           <h1>
-            <!-- iPhones, Androids and other mobile devices will recognize the phone
-            number -->
-            <a class="phonelink" href="tel:+1800-555-1234">02- 9382322</a>
-            <small class="block font300 fsize15">VIA S.ANNA 8, ARESE</small>
-          </h1>
+                        <!-- iPhones, Androids and other mobile devices will recognize the phone
+                        number -->
+                        <a class="phonelink" href="tel:+1800-555-1234">02- 9382322</a>
+                        <small class="block font300 fsize15">VIA S.ANNA 8, ARESE</small>
+                    </h1>
         </div>
       </div>
     </div>
@@ -180,7 +196,7 @@
   <script type="text/javascript" src="./extra/jquery.maximage.min.js"></script>
   <script type="text/javascript" src="./extra/scripts.js"></script>
   <!-- Google Analytics: Change UA-XXXXX-X to be your site's ID.
-  Go to http://www.google.com/analytics/ for more information. -->
+    Go to http://www.google.com/analytics/ for more information. -->
   <!--<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -191,6 +207,8 @@
 			ga('send', 'pageview');
 		</script>
 		-->
-  
+
+
+
 
 </body></html>
