--- a/solari.html
+++ b/solari.html
@@ -1,13 +1,27 @@
 <html><head></head><body>
-    <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
-      <style>
-        .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
-      </style>
-    </div>
-    <script async="" src="./extra/analytics.js"></script>
-    <script type="text/javascript">
-      window["_gaUserPrefs"] = { ioo : function() { return true; } }
-    </script>
+  <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
+    <style>
+      .fluid-width-video-wrapper {
+        width: 100%;
+        position: relative;
+        padding: 0;
+      }
+      
+      .fluid-width-video-wrapper iframe,
+      .fluid-width-video-wrapper object,
+      .fluid-width-video-wrapper embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+  </div>
+  <script async="" src="./extra/analytics.js"></script>
+  <script type="text/javascript">
+    window["_gaUserPrefs"] = { ioo : function() { return true; } }
+  </script>
   <!--<![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
@@ -31,12 +45,12 @@
   <script type="text/javascript" src="./extra/modernizr.min.js"></script>
   <style type="text/css">
     .subtitle {
-            font-family: 'Open Sans';
-            font-size: 28px;
-            line-height: 26px;
-            padding-bottom: 10;
-            margin: 0;
-        }
+      font-family: 'Open Sans';
+      font-size: 28px;
+      line-height: 26px;
+      padding-bottom: 10;
+      margin: 0;
+    }
   </style>
   <header id="header">
     <nav class="navbar navbar-inverse" role="navigation">
@@ -47,8 +61,8 @@
         <!-- /.navbar-collapse -->
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">
-							<img src="./extra/logo.png" alt="" height="40"> 
-						</a>
+            <img src="./extra/logo.png" alt="" height="40">
+          </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -92,13 +106,12 @@
           <div class="container">
             <div class="row">
               <div class="col-md-6">
-                <a><img src="foto_news/imm-laser.jpg" class="img-fluid img-thumbnail"></a>
+                <a><img src="images/laser.jpg" class="img-fluid img-thumbnail"></a>
               </div>
               <div class="col-md-6">
                 <h3 class="subtitle">LASER</h3>
-                <p class="lead text-left">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
-                  sensoriale e preservazione del capitale di giovinezza, il tutto per garantire
-                  risultati di bellezza e protezione ottimali.</p>
+                <p class="lead text-left">
+                </p>
               </div>
             </div>
           </div>
@@ -115,9 +128,21 @@
               </div>
               <div class="col-md-6">
                 <h3 class="subtitle">TRATTAMENTO MACCHIE CUTANEE</h3>
-                <p class="lead text-left">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
-                  sensoriale e preservazione del capitale di giovinezza, il tutto per garantire
-                  risultati di bellezza e protezione ottimali.</p>
+                <p class="lead text-left">È un’apparecchiatura estetica professionale di nuova generazione per eliminare progressivamente i peli superflui senza danneggiare la pelle.
+<br>
+L'impulso laser viene assorbito in grande quantità dalla melanina, e convertita in calore, aumentando così la temperatura del follicolo pilifero.
+<br>
+La temperatura aumenta danneggiando irreversibilmente la struttura del target, inevitabilmente si agisce sui processi fisiologici naturali e quindi si raggiunge lo scopo della depilazione.
+<br>
+<br>Adatto a qualsiasi tipo di pelle 
+<br>Sicuro e veloce 
+<br>Nessun danno
+<br>Raffreddamento della pelle immediato, sicuro e confortevole
+Produzione italiana<br>
+L’interazione tra il laser e il bulbo pilifero è essenzialmente termica. L'obiettivo del trattamento è rimuovere i peli indesiderati senza effetti collaterali.
+Il processo, noto come “fototermolisi selettiva”, assicura un danno effettivo del target e la simultanea protezione della pelle circostante.
+L'applicazione del laser ha dimostrato di poter ritardare in modo esteso la crescita di peli negli uomini e nelle donne. 
+Per un risultato soddisfacente sono di media necessarie dieci sessioni di trattamento. Il numero di sessioni necessarie è maggiore per le persone con crescita di peli molto forte, e per alcune zone tipo il mento.</p>
               </div>
             </div>
           </div>
@@ -152,7 +177,7 @@
   <script type="text/javascript" src="./extra/jquery.maximage.min.js"></script>
   <script type="text/javascript" src="./extra/scripts.js"></script>
   <!-- Google Analytics: Change UA-XXXXX-X to be your site's ID.
-  Go to http://www.google.com/analytics/ for more information. -->
+    Go to http://www.google.com/analytics/ for more information. -->
   <!--<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -163,6 +188,10 @@
 			ga('send', 'pageview');
 		</script>
 		-->
-  
+
+
+
+
+
 
 </body></html>
