--- a/prodotti.html
+++ b/prodotti.html
@@ -1,13 +1,27 @@
 <html><head></head><body>
-    <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
-      <style>
-        .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
-      </style>
-    </div>
-    <script async="" src="./extra/analytics.js"></script>
-    <script type="text/javascript">
-      window["_gaUserPrefs"] = { ioo : function() { return true; } }
-    </script>
+  <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
+    <style>
+      .fluid-width-video-wrapper {
+        width: 100%;
+        position: relative;
+        padding: 0;
+      }
+      
+      .fluid-width-video-wrapper iframe,
+      .fluid-width-video-wrapper object,
+      .fluid-width-video-wrapper embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+  </div>
+  <script async="" src="./extra/analytics.js"></script>
+  <script type="text/javascript">
+    window["_gaUserPrefs"] = { ioo : function() { return true; } }
+  </script>
   <!--<![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -39,8 +53,8 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">
-							<img src="./extra/logo.png" alt="" height="40"> 
-						</a>
+            <img src="./extra/logo.png" alt="" height="40">
+          </a>
         </div>
         <!-- Collect the nav links, forms, and other content for togglingz -->
         <div class="collapse navbar-collapse" style="background-color:white;z-index:10" id="bs-example-navbar-collapse-1">
@@ -78,10 +92,8 @@
       <div class="container">
         <header>
           <h1 class="text-center">PRODOTTI</h1>
-          <p class="lead text-center">Con Omeoenergetica, offriamo alle nostre clienti molto più che semplice
-            bellezza.
-            <br>Un trattamento estetico che rimane in superficie rischia infatti di dare
-            risultati che svaniscono in breve.</p>
+          <p class="lead text-center">Con Omeoenergetica®, offriamo alle nostre clienti molto più che semplice bellezza. 
+Un trattamento estetico che non rimane in superficie ma stimola a fondo i meccanismi di ringiovanimento, permettendo risultati duraturi.</p>
         </header>
         <div class="row gallery">
           <div class="col-md-12">
@@ -100,11 +112,7 @@
           <!-- lines divider -->
         </div>
         <header>
-          <p class="lead text-center">Con Esthederm trattiamo la pelle in maniera dinamica in funzione dei suoi
-            ritmi stagionali, dei cicli del giorno e della notte, e della sua evoluzione
-            nel tempo.Tutti i prodotti Esthederm sono formulati con acqua cellulare
-            che ottimizza l'ambiente energetico delle cellule.</p>
-          
+          <p class="lead text-center">Con Esthederm trattiamo la pelle in maniera dinamica in funzione dei suoi ritmi stagionali, dei cicli del giorno e della notte, e della sua evoluzione nel tempo. Tutti i prodotti Esthederm sono formulati con acqua cellulare che ottimizza l'ambiente energetico delle cellule.</p>
         </header>
         <div class="row gallery">
           <div class="col-md-12">
@@ -148,7 +156,7 @@
   <script type="text/javascript" src="./extra/jquery.maximage.min.js"></script>
   <script type="text/javascript" src="./extra/scripts.js"></script>
   <!-- Google Analytics: Change UA-XXXXX-X to be your site's ID.
-  Go to http://www.google.com/analytics/ for more information. -->
+    Go to http://www.google.com/analytics/ for more information. -->
   <!--<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -159,6 +167,8 @@
 			ga('send', 'pageview');
 		</script>
 		-->
-  
+
+
+
 
 </body></html>
