--- a/servizi.html
+++ b/servizi.html
@@ -1,13 +1,27 @@
 <html><head></head><body>
-    <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
-      <style>
-        .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
-      </style>
-    </div>
-    <script async="" src="./extra/analytics.js"></script>
-    <script type="text/javascript">
-      window["_gaUserPrefs"] = { ioo : function() { return true; } }
-    </script>
+  <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
+    <style>
+      .fluid-width-video-wrapper {
+        width: 100%;
+        position: relative;
+        padding: 0;
+      }
+      
+      .fluid-width-video-wrapper iframe,
+      .fluid-width-video-wrapper object,
+      .fluid-width-video-wrapper embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+  </div>
+  <script async="" src="./extra/analytics.js"></script>
+  <script type="text/javascript">
+    window["_gaUserPrefs"] = { ioo : function() { return true; } }
+  </script>
   <!--<![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Image di Paola Braga - Servizi</title>
@@ -28,9 +42,9 @@
   <!-- THEME CSS -->
   <link href="./extra/layout.css" rel="stylesheet" type="text/css">
   <style>
-    em{
-                font-size:14px;
-            }
+    em {
+      font-size: 14px;
+    }
   </style>
   <header id="header">
     <nav class="navbar navbar-inverse" role="navigation">
@@ -41,8 +55,8 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">
-							<img src="./extra/logo.png" alt="" height="40"> 
-						</a>
+            <img src="./extra/logo.png" alt="" height="40">
+          </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -80,9 +94,8 @@
       <div class="container">
         <header>
           <h1 class="uppercase text-center ">SERVIZI</h1>
-          <p class="lead text-center">Image è un centro di bellezza in cui l'attenzione al tuo tempo è fondamentale:
-            è il percorso di bellezza che si adatta al tuo stile di vita e ai tuoi
-            ritmi, con trattamenti che privilegiano la qualità e l'intensità.</p>
+          <p class="lead text-center">Image è un centro di bellezza in cui l'attenzione al tuo tempo è fondamentale: è il percorso di bellezza che si adatta al tuo stile di vita e ai tuoi ritmi. Offriamo trattamenti di bellezza per il corpo e il viso che vanno dalle varie tipologie
+            di massaggio alla depilazione, dai trattamenti per le macchie cutanee al laser. Veri e propri percorsi di bellezza per ritrovare giorno dopo giorno il piacere di piacersi.</p>
         </header>
         <div class="divider">
           <!-- lines divider -->
@@ -95,57 +108,63 @@
           <!-- item -->
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Manicure</h2>
+                            <i class="fa fa-dot-circle-o"></i>Manicure</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Manicure con smalto semipermanente</h2>
+                            <i class="fa fa-dot-circle-o"></i>Manicure con smalto semipermanente</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Pedicure estetico e curativo&nbsp;</h2>
+                            <i class="fa fa-dot-circle-o"></i>Manicure con smalto semipermanente</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Pedicure con smalto semipermanente</h2>
+                            <i class="fa fa-dot-circle-o"></i>Pedicure estetico e curativo</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Depilazione normale o con pasta di zucchero</h2>
+                            <i class="fa fa-dot-circle-o"></i>Pedicure con smalto semipermanente</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Depilazione laser diodo</h2>
+                            <i class="fa fa-dot-circle-o"></i>Depilazione normale o con pasta di zucchero</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Massaggi per il corpo</h2>
+                            <i class="fa fa-dot-circle-o"></i>Depilazione laser diodo</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Massaggi collo-schiena&nbsp;</h2>
+                            <i class="fa fa-dot-circle-o"></i>Massaggi per il corpo</h2>
             <!-- name -->
             <!-- short desc -->
           </div>
           <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
             <h2>
-              <i class="fa fa-dot-circle-o"></i>Trattamenti corpo mirati e personalizzati per il viso</h2>
+                            <i class="fa fa-dot-circle-o"></i>Massaggi collo-schiena</h2>
+            <!-- name -->
+            <!-- short desc -->
+          </div>
+          <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+            <h2>
+                            <i class="fa fa-dot-circle-o"></i>Trattamenti corpo mirati e personalizzati per il viso</h2>
             <!-- name
-            -->
+                        -->
             <!-- short desc -->
           </div>
           <!-- /item -->
@@ -192,7 +211,7 @@
   <script type="text/javascript" src="./extra/jquery.maximage.min.js"></script>
   <script type="text/javascript" src="./extra/scripts.js"></script>
   <!-- Google Analytics: Change UA-XXXXX-X to be your site's ID.
-  Go to http://www.google.com/analytics/ for more information. -->
+    Go to http://www.google.com/analytics/ for more information. -->
   <!--<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -203,6 +222,8 @@
 			ga('send', 'pageview');
 		</script>
 		-->
-  
+
+
+
 
 </body></html>
