--- a/trattamenti.html
+++ b/trattamenti.html
@@ -1,13 +1,27 @@
 <html><head></head><body>
-    <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
-      <style>
-        .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
-      </style>
-    </div>
-    <script async="" src="./extra/analytics.js"></script>
-    <script type="text/javascript">
-      window["_gaUserPrefs"] = { ioo : function() { return true; } }
-    </script>
+  <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
+    <style>
+      .fluid-width-video-wrapper {
+        width: 100%;
+        position: relative;
+        padding: 0;
+      }
+      
+      .fluid-width-video-wrapper iframe,
+      .fluid-width-video-wrapper object,
+      .fluid-width-video-wrapper embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+  </div>
+  <script async="" src="./extra/analytics.js"></script>
+  <script type="text/javascript">
+    window["_gaUserPrefs"] = { ioo : function() { return true; } }
+  </script>
   <!--<![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Image di Paola Braga - Trattamenti</title>
@@ -28,9 +42,9 @@
   <!-- THEME CSS -->
   <link href="./extra/layout.css" rel="stylesheet" type="text/css">
   <style>
-    em{
-            font-size:14px;
-        }
+    em {
+      font-size: 14px;
+    }
   </style>
   <header id="header">
     <nav class="navbar navbar-inverse" role="navigation">
@@ -41,8 +55,8 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">
-							<img src="./extra/logo.png" alt="" height="40"> 
-						</a>
+            <img src="./extra/logo.png" alt="" height="40">
+          </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -81,20 +95,11 @@
         <header>
           <h1 class="uppercase text-center ">TRATTAMENTI</h1>
           <p class="lead text-center">L'ideale di bellezza che cerchiamo è già dentro di noi.
-            <br>
-            <br>La bellezza è prima di tutto l’espressione di uno stato di grazia. Da
-            questa realtà nasce il mio approccio all’estetica, che ha lo scopo di riequilibrare,
-            valorizzare e rafforzare l’enorme potenziale di bellezza che è già presente
-            nel nostro corpo.
-            <br>
-            <br>In Omeoenergetica® e Esthederm ho trovato tutti gli strumenti per stimolare
-            e allenare il corpo a produrre bellezza, facendo emergere le energie che
-            hai dentro con trattamenti efficaci che danno risultati immediati&nbsp;
-            <br>e&nbsp;che durano nel tempo.&nbsp;
-            <br>
-            <br>Un centro in cui l’attenzione al tuo tempo è fondamentale: è il percorso
-            di bellezza che si adatta al tuo stile di vita&nbsp;
-            <br>e ai tuoi&nbsp;ritmi, con trattamenti che privilegiano la qualità e l’intensità.
+            <br>La bellezza è prima di tutto l’espressione di uno stato di grazia. Da questa realtà nasce il mio approccio all’estetica, che ha lo scopo di riequilibrare, valorizzare e rafforzare l’enorme potenziale di bellezza che è già presente nel nostro
+            corpo.&nbsp;
+            <br>In Omeoenergetica® e Esthederm ho trovato tutti gli&nbsp;strumenti per stimolare e allenare il corpo a produrre bellezza, facendo emergere le energie che abbiamo dentro con trattamenti efficaci che danno risultati immediati e duraturi.
+
+
             <br>
             <br>Paola Braga</p>
         </header>
@@ -124,27 +129,19 @@
         <!-- item -->
         <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
           <h2 class="text-center">TRATTAMENTI VISO A 360°
-            <br>Dopo un'attenta analisi della cute del cliente siamo in grado di trovare
-            la soluzione migliore per ogni tipo di inestetismi a ogni fascia di età.&nbsp;Con
-            dei trattamenti mirati e la complicità della cliente a casa, i risultati
-            saranno evidenti sin dai primi giorni. L'esperienza, le tecnologie da noi
-            utilizzate e i prodotti con innumerevoli brevetti mondiali sono la nostra
-            carta vincente.</h2>
+                        <br>Dopo un'attenta analisi della cute del cliente siamo in grado di trovare la soluzione migliore per ogni tipo di inestetismi ad ogni fascia di età. Con trattamenti mirati che prevedono azioni specifiche presso il centro e un percorso di bellezza da seguire direttamente da casa, i risultati saranno evidenti sin dai primi giorni. L'esperienza, le tecnologie da noi utilizzate e i prodotti con innumerevoli brevetti mondiali sono la nostra carta vincente.
+</h2>
           <!-- name -->
           <!-- short desc -->
         </div>
         <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
           <h2>
-            <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica
-            ®.</h2>
+                        <i class="fa fa-dot-circle-o"></i>Il benessere scritto sul viso: Rejuvenating Anti Aging Method di Omeoenergetica ®.
+</h2>
           <!-- name -->
           <p>
-            <em>La tua pelle racconta la vita che fai, i tuoi orari, cosa mangi e cosa
-              respiri. Per lasciarti alle spalle stress e smog, regala al tuo viso un
-              trattamento viso di Omeoenergetica®: il trattamento che in soli 30 minuti
-              rende la tua pelle più vitale, luminosa ed elastica. In poco tempo tornerà
-              a respirare e a splendere. E tu con lei.</em>&nbsp; &nbsp; &nbsp; &nbsp;
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+            <em>La tua pelle racconta la vita che fai, i tuoi orari, cosa mangi e cosa respiri. Per lasciarti alle spalle stress e smog, regala al tuo viso un trattamento viso di Omeoenergetica®: il trattamento che in soli 30 minuti rende la tua pelle più vitale, luminosa ed elastica. In poco tempo tornerà a respirare e a splendere. E tu con lei.                     
+.</em></p>
           <!-- short desc -->
         </div>
         <!-- /item -->
@@ -159,47 +156,33 @@
         <!-- item -->
         <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20 col-lg-offset-1">
           <h2>
-            <i class="fa fa-dot-circle-o"></i>La scultura del tuo corpo.</h2>
+                        <i class="fa fa-dot-circle-o"></i>La scultura del tuo corpo.</h2>
           <!-- name -->
           <p>
-            <em>Trattamento estetico per il dimagrimento localizzato e diffuso. Agire
-              sui cosiddetti “punti critici”: glutei, cosce, fianchi, braccia, zone in
-              cui il grasso si accumula più facilmente rispetto alle altre. E’ un trattamento
-              che permette di aumentare il metabolismo locale dei grassi e perdere centimetri
-              solo dove è necessario. Tecnica manuale, una speciale tecnologia che riporta
-              le zone fredde a 37 ° e prodotti specifici di permetteranno di recuperare
-              la forma migliore o di prevenire l’insorgenza del problema.</em>
+            <em>Trattamento estetico per il dimagrimento localizzato e diffuso. Agire sui cosiddetti “punti critici”: glutei, cosce, fianchi, braccia, zone in cui il grasso si accumula più facilmente rispetto alle altre. E’ un trattamento che permette di aumentare il metabolismo locale dei grassi e perdere centimetri solo dove è necessario. Tecnica manuale, una speciale tecnologia che riporta le zone fredde a 37 ° e prodotti specifici permetteranno di recuperare la forma migliore o di prevenire l’insorgenza di accumuli di grasso.
+</em>
           </p>
           <!-- short desc -->
         </div>
         <!-- /item -->
         <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
           <h2>
-            <i class="fa fa-dot-circle-o"></i>Trattamento per la cellulite e gambe pesanti</h2>
+                        <i class="fa fa-dot-circle-o"></i>Trattamento per la cellulite e gambe pesanti</h2>
           <!-- name -->
           <p>
-            <em>Rilancia contemporaneamente i meccanismi di drenaggio linfatico di liquidi
-              e tossine, del sistema micro circolatorio e del metabolismo dei grassi
-              per contrastare efficacemente le cause che provocano la cellulite e gambe
-              pesanti. Una vera e propria esperienza di benessere per le tue gambe.</em>
+            <em>
+             Rilancia contemporaneamente i meccanismi di drenaggio linfatico di liquidi e tossine, del sistema micro circolatorio e del metabolismo dei grassi per contrastare efficacemente le cause che provocano la cellulite e rendono le gambe “pesanti”. Una vera e propria esperienza di benessere per le tue gambe.</em>
           </p>
           <!-- short desc -->
         </div>
         <!-- /item -->
         <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
           <h2>
-            <i class="fa fa-dot-circle-o"></i>Trattamento di Rebalancing per il recupero di vitalità</h2>
+                        <i class="fa fa-dot-circle-o"></i>Trattamento di Rebalancing per il recupero di vitalità</h2>
           <!-- name
-          -->
+                    -->
           <p>
-            <em>Per recuperare e rinforzare le energie vitali del corpo ogniqualvolta
-              se ne senta la necessità: dopo un periodo di sedentarietà, in particolari
-              momenti di stress, quando il corpo inizia ad inviare segnali di accumulo
-              di tossine o si manifestano i primi inestetismi legati a un metabolismo
-              rallentato. Il corpo riacquista quell’equilibrio energetico necessario
-              a mantenere attive tutte le funzioni vitali. Fin da subito si avverte una
-              nuova vitalità uno stato di benessere generale che si protrae nei giorni
-              successivi al trattamento.</em>
+            <em>Per recuperare e rinforzare le energie vitali del corpo ogniqualvolta se ne senta la necessità: dopo un periodo di sedentarietà, in particolari momenti di stress, quando il corpo inizia ad inviare segnali di accumulo di tossine o si manifestano i primi inestetismi legati a un metabolismo rallentato. Il corpo riacquista quell’equilibrio energetico necessario a mantenere attive tutte le funzioni vitali. Fin da subito si avverte una nuova vitalità, uno stato di benessere generale che si protrae nei giorni successivi al trattamento.</em>
           </p>
           <!-- short desc -->
         </div>
@@ -234,7 +217,7 @@
   <script type="text/javascript" src="./extra/jquery.maximage.min.js"></script>
   <script type="text/javascript" src="./extra/scripts.js"></script>
   <!-- Google Analytics: Change UA-XXXXX-X to be your site's ID.
-  Go to http://www.google.com/analytics/ for more information. -->
+    Go to http://www.google.com/analytics/ for more information. -->
   <!--<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -245,6 +228,10 @@
 			ga('send', 'pageview');
 		</script>
 		-->
-  
+
+
+
+
+
 
 </body></html>
